kubernetes/healthrecord-repository-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: healthrecord-repository
  namespace: default
  creationTimestamp: null
  labels:
    run: healthrecord-repository
spec:
  replicas: 1
  selector:
    matchLabels:
      run: healthrecord-repository
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: healthrecord-repository
    spec:
      containers:
      - name: healthrecord-repository
        image: healthrecord-repository:v3
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
