kubernetes/mongo-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: mongo
  namespace: default
  creationTimestamp: null
  labels:
    run: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mongo
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
