kubernetes/healthrecord-repository-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: healthrecord-repository
  namespace: default
  creationTimestamp: null
  labels:
    run: healthrecord-repository
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    run: healthrecord-repository
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
status:
  loadBalancer: {}
