kubernetes/mongo-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: default
  creationTimestamp: null
  labels:
    run: mongo
spec:
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    run: mongo
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
